--- a/src/Components/Maps.css
+++ b/src/Components/Maps.css
@@ -2,40 +2,74 @@
   height: 100%;
 
 }
-body {
+ body {
   height: 100%;
-}
+} */
 
-.divZero {
+/* .divZero {
   height: 100%;
-}
+} */
 
-.divOne {
+/* .divOne {
   position: relative;
   height: 100%;
-}
+} */
 
-.divTwo {
+/* .divTwo {
   position: relative;
   height: 100%;
-}
+} */
+
+/* .map-container {
+  position: relative;
+} */
 
 .map-container {
-  position: relative;
+position: absolute;
+top: 0;
+bottom: 0;
+right: 0;
+left: 0;
 }
 
-.mapboxgl-canvas-container {
+/* .mapboxgl-canvas {
   position: relative;
-}
+  height: 100%;
+  width: 100%;
+} */
 
-.mapboxgl-canvas {
+
+/* .mapboxgl-canvas-container {
   position: relative;
-}
+  width:100%;
+  height:100%;
+} */
 
-.divThree {
+/* #map {
+  height: 500px;
+  width: 500px;
+
+} */
+
+
+/* .divThree {
   position: relative;
   bottom: 0px;
   width: 100%;
+} */
+
+
+.sidebar {
+background-color: rgba(35, 55, 75, 0.9);
+color: #ffffff;
+padding: 6px 12px;
+font: 15px/24px monospace;
+z-index: 1;
+position: absolute;
+top: 0;
+left: 0;
+margin: 12px;
+border-radius: 4px;
 }
 
 #menu {
@@ -78,4 +112,4 @@ color: #ffffff;
 
 #menu a.active:hover {
 background: #3074a4;
-} */
+}
