--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 body {
   /* margin: 0; */
-  background: hsl(185, 3%, 83%, 0.5);
+  background: hsla(185, 3%, 83%, 0.5);
   /* overflow: hidden; */
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
