--- a/src/Components/App.css
+++ b/src/Components/App.css
@@ -68,11 +68,11 @@ h2 {
 
 .iframe-svg-container {
   display: inline-flex;
-  margin-left: 20px;
+  margin: 0 20px;
 }
 
-.map-div-container {
-  /* display: block; */
+.svg-map {
+  padding: 0 0 0 0;
 }
 
 .captions {
@@ -83,14 +83,6 @@ h2 {
   margin-left: 0.25em;
 }
 
-/* .butt1 {
-  display: inline-block;
-  position: relative;
-  /* transform:translate(0, -100); */
-  /* transform={`translate(0, -100)`} */
-  /* top: -100px;
-} */
-
 .footnote {
   /* justify-content: flex-end; */
   padding-top: 0.25em;
@@ -99,7 +91,13 @@ h2 {
 .maps-footer {
   margin-bottom: 2em;
 }
-
+.axis-label {
+  font-size: 1em;
+  fill: #635F5D;
+}
+.three-graphs-div {
+  padding: 0 20px;
+}
 .three-graphs {
   display: inline-flex;
   flex-wrap: wrap;
