--- a/src/Components/App.css
+++ b/src/Components/App.css
@@ -1,6 +1,7 @@
-/* .App {
-  text-align: center;
-} */
+.App {
+box-sizing: border-box;
+
+}
 
 pre {
   font-size: 7em;
@@ -95,6 +96,12 @@ h2 {
   flex-wrap: wrap;
 }
 
+.chart-title {
+  font-size:1.1rem;
+  fill: #635F5D;
+
+}
+
 .axis-label {
   font-size: 0.5em;
   fill: #635F5D;
@@ -103,6 +110,10 @@ h2 {
 text {
   font-size: 1.3em;
 }
+
+/* .xAxis-tspan {
+  dy: 1.3em;
+} */
 
 .tick text {
   /* font-size: 2.7em; */
