--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,8 @@
 body {
-  /* margin: 0; */
+  margin: 0 20;
   background: hsla(185, 3%, 83%, 0.5);
   /* overflow: hidden; */
+  box-sizing: border-box;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
