--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,9 @@
 body {
-  margin: 0 20;
+  /* margin: 0 20; */
   background: hsla(185, 3%, 83%, 0.5);
-  /* overflow: hidden; */
   box-sizing: border-box;
+
+  /* overflow: hidden; */
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
