--- a/src/Components/App.css
+++ b/src/Components/App.css
@@ -2,15 +2,20 @@
 pre {
   font-size: 4em;
 }
+
 h1 {
-font-size:2em;
-text-align: center;
+  font-size:2em;
+  text-align: center;
 }
 h2 {
   font-size:1rem;
 }
+
+.main-container {
+  margin: 0 10px 0 10px;
+}
 .headline {
-  margin:2em;
+  padding:2em;
 }
 .headline-indent {
   padding-left: 40px;
@@ -22,14 +27,28 @@ h2 {
 }
 .maps-header {
   padding: 0 0.8em 0 0.8em;
-  margin-bottom: 0.5em;
+  margin-bottom: 0.3em;
 }
 .maps-footer {
   padding: 0 0.8em 2em 0.8em;
+  margin-bottom: 0.3em;
+
 }
 .footnote {
   text-align: right;
   font-size: .66em;
+}
+.quote {
+  padding: 0 0.8em 0 0.8em;
+  margin-bottom: 0.5em;
+}
+.charts-header-lead {
+  padding: 0 0.8em 0 0.8em;
+  margin-bottom: 0.5em;
+}
+.charts-header {
+  padding: 0 0.8em 0 0.8em;
+  margin-bottom: 0.5em;
 }
 .three-graphs-div {
   padding: 0 20px;
